--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ([2.69])
 AC_INIT([sylvan], [1.0])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([tools])
-AM_INIT_AUTOMAKE([foreign subdir-objects])
+AM_INIT_AUTOMAKE([foreign])
 
 AC_PROG_CC
 LT_INIT
@@ -15,5 +15,5 @@ AC_CANONICAL_HOST
 AM_CONDITIONAL([DARWIN], [case $host_os in darwin*) true;; *) false;; esac])
 # test x$(uname) == "xDarwin"])
 
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile])
 AC_OUTPUT
