--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # autotools
-/Makefile
+**/Makefile
 /autom4te.cache/
 config.*
 .dirstamp
@@ -10,9 +10,9 @@ tools
 Makefile.in
 
 # cmake
-CMakeCache.txt
-CMakeFiles
-cmake_install.cmake
+**/CMakeCache.txt
+**/CMakeFiles
+**/cmake_install.cmake
 
 # libtool
 .deps/
