--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,6 +27,8 @@ libsylvan_la_SOURCES = \
     sylvan_ldd.c \
     sylvan_common.c \
     sylvan_common.h \
+    sylvan_obj.hpp \
+    sylvan_obj.cpp \
     tls.h
 
 libsylvan_la_LIBADD = -lm
