updated Makefile.am in subdirectory src

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libsylvan.la
 
-libsylvan_la_CFLAGS = $(AM_CFLAGS) -fno-strict-aliasing
+libsylvan_la_CFLAGS = $(AM_CFLAGS) -fno-strict-aliasing -std=gnu11
 
 libsylvan_la_SOURCES = \
     atomics.h \
