--- a/.travis.yml
+++ b/.travis.yml
@@ -38,9 +38,9 @@ script:
 - export CMAKE_ARGS="-DCMAKE_BUILD_TYPE=$BUILD_TYPE -DUSE_HWLOC=$HWLOC"
 - if [ "$CC" = "gcc" ]; then cmake . -DCMAKE_CXX_COMPILER=g++-4.8 -DCMAKE_C_COMPILER=gcc-4.8 $CMAKE_ARGS; fi
 - if [ "$CC" = "clang" ]; then cmake . $CMAKE_ARGS; fi
-- make
+- make -j 2
 - make test
-- examples/mc models/schedule_world.2.8-rgs.bdd -w 1 | tee /dev/fd/2 | grep -q "1,570,340"
+- examples/mc models/schedule_world.2.8-rgs.bdd -w 2 | tee /dev/fd/2 | grep -q "1,570,340"
 
 notifications:
   email: false
