--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ script:
 - if [ "$CC" = "clang" ]; then cmake . $CMAKE_ARGS; fi
 - make -j 2
 - make test
+- examples/simple
 - examples/mc models/schedule_world.2.8-rgs.bdd -w 2 | tee /dev/fd/2 | grep -q "1,570,340"
 
 notifications:
