--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ script:
 - make test
 - examples/simple
 - examples/mc models/schedule_world.2.8-rgs.bdd -w 2 | tee /dev/fd/2 | grep -q "1,570,340"
+- examples/lddmc models/blocks.2.ldd -w 2 | tee /dev/fd/2 | grep -q "7057 states"
 
 notifications:
   email: false
