examples: added symbolic scc detection

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,6 +9,9 @@ target_link_libraries(mc sylvan)
 add_executable(lddmc lddmc.c getrss.h getrss.c)
 target_link_libraries(lddmc sylvan)
 
+add_executable(scc scc.c getrss.h getrss.c)
+target_link_libraries(scc sylvan)
+
 add_executable(simple simple.cpp)
 target_link_libraries(simple sylvan stdc++)
 
@@ -21,12 +24,16 @@ if(HAVE_PROFILER)
 
     set_target_properties(lddmc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
     target_link_libraries(lddmc profiler)
+
+    set_target_properties(scc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
+    target_link_libraries(scc profiler)
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     # add argp library for OSX
     target_link_libraries(mc argp)
     target_link_libraries(lddmc argp)
+    target_link_libraries(scc argp)
 endif()
 
 
