mtbdd: new serialization (to text, to/from binary) subroutines, except no support yet for custom leaves

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,8 @@ add_library(sylvan
     sylvan_obj.cpp
     sylvan_refs.h
     sylvan_refs.c
+    sylvan_sl.h
+    sylvan_sl.c
     sylvan_stats.h
     sylvan_stats.c
     tls.h
