Refactor to create sylvan_int.h for Sylvan internals; plus a lot of comment changes

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,6 +14,7 @@ libsylvan_la_SOURCES = \
     sylvan_config.h \
     sylvan_bdd.h \
     sylvan_bdd.c \
+    sylvan_int.h \
     sylvan_ldd.h \
     sylvan_ldd.c \
     sylvan_cache.h \
