--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,6 +9,9 @@ target_link_libraries(mc sylvan)
 add_executable(lddmc lddmc.c getrss.h getrss.c)
 target_link_libraries(lddmc sylvan)
 
+add_executable(ldd2bdd ldd2bdd.c)
+target_link_libraries(ldd2bdd sylvan)
+
 add_executable(nqueens nqueens.c)
 target_link_libraries(nqueens sylvan)
 
@@ -33,6 +36,7 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     # add argp library for OSX
     target_link_libraries(mc argp)
     target_link_libraries(lddmc argp)
+    target_link_libraries(ldd2bdd argp)
     target_link_libraries(nqueens argp)
 endif()
 
