--- a/.travis.yml
+++ b/.travis.yml
@@ -3,84 +3,71 @@ sudo: false
 matrix:
   include:
   - os: linux
-    env: TOOLSET=gcc CC=gcc-4.7 CXX=g++-4.7 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="ON"
-    addons:
-      apt:
-        packages: ["gcc-4.7", "g++-4.7", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-
-  - os: linux
-    env: TOOLSET=gcc CC=gcc-4.8 CXX=g++-4.8 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="ON"
-    addons:
-      apt:
-        packages: ["gcc-4.8", "g++-4.8", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=gcc CC=gcc-4.9 CXX=g++-4.9 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="ON"
+    env: TOOLSET=gcc CC=gcc-4.9 CXX=g++-4.9 BUILD_TYPE="Release" SYLVAN_STATS="ON"
     addons:
       apt:
         packages: ["gcc-4.9", "g++-4.9", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
   - os: linux
-    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Debug" HWLOC="OFF" SYLVAN_STATS="OFF"
+    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release" SYLVAN_STATS="ON"
     addons:
       apt:
         packages: ["gcc-5", "g++-5", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
   - os: linux
-    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Debug" HWLOC="ON" SYLVAN_STATS="ON"
+    env: TOOLSET=gcc CC=gcc-6 CXX=g++-6 BUILD_TYPE="Release" SYLVAN_STATS="ON"
+    addons:
+      apt:
+        packages: ["gcc-6", "g++-6", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
+        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
+  - os: linux
+    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Debug" SYLVAN_STATS="ON"
     addons:
       apt:
         packages: ["gcc-5", "g++-5", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
   - os: linux
-    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="ON"
+    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release"  SYLVAN_STATS="OFF"
     addons:
       apt:
         packages: ["gcc-5", "g++-5", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
   - os: linux
-    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="OFF"
+    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release" SYLVAN_STATS="ON" VARIANT="coverage"
     addons:
       apt:
         packages: ["gcc-5", "g++-5", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
   - os: linux
-    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="ON" VARIANT="coverage"
-    addons:
-      apt:
-        packages: ["gcc-5", "g++-5", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=clang CC=/usr/local/clang-3.4/bin/clang CXX=/usr/local/clang-3.4/bin/clang++ BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="ON"
-    addons:
-      apt:
-        packages: ["clang-3.4", "libstdc++-5-dev", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.4", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=clang CC=clang-3.6 CXX=clang++-3.6 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="ON"
+    env: TOOLSET=clang CC=clang-3.6 CXX=clang++-3.6 BUILD_TYPE="Release" SYLVAN_STATS="ON"
     addons:
       apt:
         packages: ["clang-3.6", "libstdc++-5-dev", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.6", "george-edison55-precise-backports"]
   - os: linux
-    env: TOOLSET=clang CC=clang-3.7 CXX=clang++-3.7 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="ON"
+    env: TOOLSET=clang CC=clang-3.7 CXX=clang++-3.7 BUILD_TYPE="Release" SYLVAN_STATS="ON"
     addons:
       apt:
         packages: ["clang-3.7", "libstdc++-5-dev", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.7", "george-edison55-precise-backports"]
+  - os: linux
+    env: TOOLSET=clang CC=clang-3.8 CXX=clang++-3.8 BUILD_TYPE="Release" SYLVAN_STATS="ON"
+    addons:
+      apt:
+        packages: ["clang-3.8", "libstdc++-5-dev", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
+        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.8", "george-edison55-precise-backports"]
   - os: osx
-    env: TOOLSET=clang CC=clang CXX=clang++ BUILD_TYPE="Debug" HWLOC="ON" SYLVAN_STATS="ON"
+    env: TOOLSET=clang CC=clang CXX=clang++ BUILD_TYPE="Debug" SYLVAN_STATS="ON"
   - os: osx
-    env: TOOLSET=clang CC=clang CXX=clang++ BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="OFF"
+    env: TOOLSET=clang CC=clang CXX=clang++ BUILD_TYPE="Release" SYLVAN_STATS="OFF"
   - os: osx
-    env: TOOLSET=gcc CC=gcc-4.9 CXX=g++-4.9 BUILD_TYPE="Debug" HWLOC="ON" SYLVAN_STATS="OFF"
+    env: TOOLSET=gcc CC=gcc-4.9 CXX=g++-4.9 BUILD_TYPE="Debug" SYLVAN_STATS="OFF"
   - os: osx
-    env: TOOLSET=gcc CC=gcc-4.9 CXX=g++-4.9 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="OFF"
+    env: TOOLSET=gcc CC=gcc-4.9 CXX=g++-4.9 BUILD_TYPE="Release" SYLVAN_STATS="OFF"
   - os: osx
-    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Debug" HWLOC="ON" SYLVAN_STATS="OFF"
+    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Debug" SYLVAN_STATS="OFF"
   - os: osx
-    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release" HWLOC="ON" SYLVAN_STATS="OFF"
+    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release" SYLVAN_STATS="OFF"
 
 install:
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install argp-standalone homebrew/science/hwloc; fi
@@ -89,7 +76,7 @@ install:
 script:
 - ${CC} --version
 - ${CXX} --version
-- cmake . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DUSE_HWLOC=${HWLOC} -DSYLVAN_STATS=${SYLVAN_STATS} -DWITH_COVERAGE=${COVERAGE}
+- cmake . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DSYLVAN_STATS=${SYLVAN_STATS} -DWITH_COVERAGE=${COVERAGE}
 - make -j 2
 - make test
 - examples/simple
