pkg-config: add "Requires:hwloc"
This is necessary, since every application
that links with Sylvan should also link with hwloc.

--- a/sylvan.pc.cmake.in
+++ b/sylvan.pc.cmake.in
@@ -7,4 +7,5 @@ URL: @PROJECT_URL@
 Version: @PROJECT_VERSION@
 Cflags: -I${includedir}
 Libs: -L${libdir} -lsylvan
-Libs.private: -lpthread -lm -lgmp -lhwloc
+Libs.private: -lpthread -lm -lgmp
+Requires: hwloc
