all: remove support for hwloc pinning for now
May reintroduce this later, as it is useful for NUMA machines.
But it is not needed for most systems (SMP) and in fact the current design
makes it impossible to run multiple programs at the same time that rely on
Sylvan and Lace.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,9 +41,8 @@ option(BUILD_STATIC_LIBS "Enable/disable creation of static libraries" ON)
 add_library(sylvan ${SOURCES})
 
 find_package(GMP REQUIRED)
-find_package(Hwloc REQUIRED)
 
-target_link_libraries(sylvan m pthread ${GMP_LIBRARIES} ${HWLOC_LIBRARIES})
+target_link_libraries(sylvan m pthread ${GMP_LIBRARIES})
 
 if(UNIX AND NOT APPLE)
     target_link_libraries(sylvan rt)
