Add include dir for libsylvan target.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,6 +42,8 @@ add_library(sylvan ${SOURCES})
 
 find_package(GMP REQUIRED)
 
+target_include_directories(sylvan PRIVATE ${GMP_INCLUDE_DIR})
+
 target_link_libraries(sylvan m pthread ${GMP_LIBRARIES})
 
 if(UNIX AND NOT APPLE)
