tools: rename mc to bddmc

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(.)
 
-add_executable(mc mc.c getrss.h getrss.c)
-target_link_libraries(mc sylvan)
+add_executable(bddmc bddmc.c getrss.h getrss.c)
+target_link_libraries(bddmc sylvan)
 
 add_executable(lddmc lddmc.c getrss.h getrss.c)
 target_link_libraries(lddmc sylvan)
@@ -19,8 +19,8 @@ include(CheckIncludeFiles)
 check_include_files("gperftools/profiler.h" HAVE_PROFILER)
 
 if(HAVE_PROFILER)
-    set_target_properties(mc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
-    target_link_libraries(mc profiler)
+    set_target_properties(bddmc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
+    target_link_libraries(bddmc profiler)
 
     set_target_properties(lddmc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
     target_link_libraries(lddmc profiler)
@@ -31,7 +31,7 @@ endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     # add argp library for OSX
-    target_link_libraries(mc argp)
+    target_link_libraries(bddmc argp)
     target_link_libraries(lddmc argp)
     target_link_libraries(ldd2bdd argp)
     target_link_libraries(nqueens argp)
