examples: implement ldd2meddly and medmc to convert a LDD to MDD and run MDD reachability using saturation

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,6 +15,18 @@ target_link_libraries(nqueens sylvan)
 add_executable(simple simple.cpp)
 target_link_libraries(simple sylvan stdc++)
 
+# Check if we have Meddly
+find_library(MEDDLY_FOUND meddly)
+if(MEDDLY_FOUND)
+    add_executable(ldd2meddly ldd2meddly.cpp)
+    target_link_libraries(ldd2meddly sylvan stdc++ meddly)
+    set_target_properties(ldd2meddly PROPERTIES COMPILE_OPTIONS "-Wno-unused")
+
+    add_executable(medmc medmc.cpp)
+    target_link_libraries(medmc stdc++ meddly)
+    set_target_properties(medmc PROPERTIES COMPILE_OPTIONS "-Wno-unused")
+endif()
+
 include(CheckIncludeFiles)
 check_include_files("gperftools/profiler.h" HAVE_PROFILER)
 
@@ -33,6 +45,10 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     # add argp library for OSX
     target_link_libraries(bddmc argp)
     target_link_libraries(lddmc argp)
+    if(MEDDLY_FOUND)
+        target_link_libraries(medmc argp)
+        target_link_libraries(ldd2meddly argp)
+    endif()
     target_link_libraries(ldd2bdd argp)
     target_link_libraries(nqueens argp)
 endif()
