Replace CMAKE_SOURCE_DIR by CMAKE_CURRENT_SOURCE_DIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ if(WITH_COVERAGE)
     )
 endif()
 
-include_directories(${CMAKE_SOURCE_DIR}/src)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 include(GNUInstallDirs)
 include(CTest)
 
