--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,6 @@ sudo: false
 matrix:
   include:
   - os: linux
-    env: TOOLSET=gcc CC=gcc-4.9 CXX=g++-4.9 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
-    addons:
-      apt:
-        packages: ["gcc-4.9", "g++-4.9", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-  - os: linux
     env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
     addons:
       apt:
@@ -21,16 +15,28 @@ matrix:
         packages: ["gcc-6", "g++-6", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
   - os: linux
+    env: TOOLSET=gcc CC=gcc-7 CXX=g++-7 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
+    addons:
+      apt:
+        packages: ["gcc-7", "g++-7", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
+        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
+  - os: linux
+    env: TOOLSET=gcc CC=gcc-8 CXX=g++-8 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
+    addons:
+      apt:
+        packages: ["gcc-8", "g++-8", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
+        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
+  - os: linux
     env: TOOLSET=gcc CC=gcc-6 CXX=g++-6 BUILD_TYPE="Debug" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
     addons:
       apt:
         packages: ["gcc-6", "g++-6", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
   - os: linux
-    env: TOOLSET=gcc CC=gcc-6 CXX=g++-6 BUILD_TYPE="Release"  SYLVAN_STATS="OFF" SYLVAN_BUILD_DOCS="OFF"
+    env: TOOLSET=gcc CC=gcc-8 CXX=g++-8 BUILD_TYPE="Release"  SYLVAN_STATS="OFF" SYLVAN_BUILD_DOCS="OFF"
     addons:
       apt:
-        packages: ["gcc-6", "g++-6", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
+        packages: ["gcc-8", "g++-8", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
         sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
   - os: linux
     env: TOOLSET=clang CC=clang-3.7 CXX=clang++-3.7 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
@@ -59,10 +65,10 @@ script:
 - ${CC} --version
 - ${CXX} --version
 - cmake . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DSYLVAN_STATS=${SYLVAN_STATS} -DWITH_COVERAGE=${COVERAGE} -DSYLVAN_BUILD_DOCS=${SYLVAN_BUILD_DOCS} -DSYLVAN_BUILD_EXAMPLES=ON
-- make -j 2
+- make -j 4
 - make test
 - examples/simple
-- examples/mc models/schedule_world.2.bdd -w 2 | tee /dev/fd/2 | grep -q "1,570,340"
+- examples/bddmc models/schedule_world.2.bdd -w 2 | tee /dev/fd/2 | grep -q "1,570,340"
 - examples/lddmc models/blocks.2.ldd -w 2 | tee /dev/fd/2 | grep -q "7,057 states"
 
 notifications:
