--- a/.travis.yml
+++ b/.travis.yml
@@ -1,76 +1,39 @@
+os:
+  - linux
+  - osx
 sudo: false
+dist: bionic
+osx_image: xcode10.1
 
-matrix:
-  include:
-  - os: linux
-    env: TOOLSET=gcc CC=gcc-5 CXX=g++-5 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
-    addons:
-      apt:
-        packages: ["gcc-5", "g++-5", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=gcc CC=gcc-6 CXX=g++-6 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
-    addons:
-      apt:
-        packages: ["gcc-6", "g++-6", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=gcc CC=gcc-7 CXX=g++-7 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
-    addons:
-      apt:
-        packages: ["gcc-7", "g++-7", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=gcc CC=gcc-8 CXX=g++-8 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
-    addons:
-      apt:
-        packages: ["gcc-8", "g++-8", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=gcc CC=gcc-6 CXX=g++-6 BUILD_TYPE="Debug" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
-    addons:
-      apt:
-        packages: ["gcc-6", "g++-6", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=gcc CC=gcc-8 CXX=g++-8 BUILD_TYPE="Release"  SYLVAN_STATS="OFF" SYLVAN_BUILD_DOCS="OFF"
-    addons:
-      apt:
-        packages: ["gcc-8", "g++-8", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=clang CC=clang-3.7 CXX=clang++-3.7 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
-    addons:
-      apt:
-        packages: ["clang-3.7", "libstdc++-5-dev", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.7", "george-edison55-precise-backports"]
-  - os: linux
-    env: TOOLSET=clang CC=clang-3.8 CXX=clang++-3.8 BUILD_TYPE="Release" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
-    addons:
-      apt:
-        packages: ["clang-3.8", "libstdc++-5-dev", "libgmp-dev", "cmake", "cmake-data", "libhwloc-dev"]
-        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.8", "george-edison55-precise-backports"]
-  - os: osx
-    env: TOOLSET=clang CC=clang CXX=clang++ BUILD_TYPE="Debug" SYLVAN_STATS="ON" SYLVAN_BUILD_DOCS="OFF"
-  - os: osx
-    env: TOOLSET=clang CC=clang CXX=clang++ BUILD_TYPE="Release" SYLVAN_STATS="OFF" SYLVAN_BUILD_DOCS="OFF"
-  - os: osx
-    env: TOOLSET=gcc CC=gcc-6 CXX=g++-6 BUILD_TYPE="Release" SYLVAN_STATS="OFF" SYLVAN_BUILD_DOCS="OFF"
-  - os: osx
-    env: TOOLSET=gcc CC=gcc-7 CXX=g++-7 BUILD_TYPE="Release" SYLVAN_STATS="OFF" SYLVAN_BUILD_DOCS="OFF"
-  - os: osx
-    env: TOOLSET=gcc CC=gcc-8 CXX=g++-8 BUILD_TYPE="Release" SYLVAN_STATS="OFF" SYLVAN_BUILD_DOCS="OFF"
+env:
+  matrix:
+    - BUILD_TYPE="Release" SYLVAN_STATS="ON"
+    - BUILD_TYPE="Release" SYLVAN_STATS="OFF"
+    - BUILD_TYPE="Debug" SYLVAN_STATS="ON"
+    - BUILD_TYPE="Debug" SYLVAN_STATS="OFF"
+
+language: c
+compiler:
+- gcc
+- clang
+
+addons:
+  apt:
+    packages:
+      - libgmp-dev
+      - cmake
+      - cmake-data
+      - build-essential
 
 install:
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install argp-standalone hwloc; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" && "$CC" == "gcc-6" ]]; then brew install gcc6 && brew link --overwrite gcc6; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" && "$CC" == "gcc-7" ]]; then brew install gcc7 && brew link --overwrite gcc7; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" && "$CC" == "gcc-8" ]]; then brew install gcc8 && brew link --overwrite gcc8; fi
-
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+    export HOMEBREW_NO_INSTALL_CLEANUP=1;
+    brew update;
+    brew install argp-standalone;
+  fi
+   
 script:
-- ${CC} --version
-- ${CXX} --version
-- cmake . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DSYLVAN_STATS=${SYLVAN_STATS} -DWITH_COVERAGE=${COVERAGE} -DSYLVAN_BUILD_DOCS=${SYLVAN_BUILD_DOCS} -DSYLVAN_BUILD_EXAMPLES=ON
+- cmake . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DSYLVAN_STATS=${SYLVAN_STATS} -DSYLVAN_BUILD_EXAMPLES=ON
 - make -j 4
 - make test
 - examples/simple
