--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 os:
   - linux
   - osx
-sudo: false
-dist: bionic
-osx_image: xcode10.1
+
+dist:
+- focal
+- bionic
+
+osx_image:
+- xcode9.4.1
+- xcode12.3
 
 env:
   matrix:
@@ -12,7 +17,9 @@ env:
     - BUILD_TYPE="Debug" SYLVAN_STATS="ON"
     - BUILD_TYPE="Debug" SYLVAN_STATS="OFF"
 
-language: c
+language:
+- c
+
 compiler:
 - gcc
 - clang
@@ -24,18 +31,15 @@ addons:
       - cmake
       - cmake-data
       - build-essential
+  homebrew:
+    packages:
+    - argp-standalone
+    update: true
 
-install:
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-    export HOMEBREW_NO_INSTALL_CLEANUP=1;
-    brew update;
-    brew install argp-standalone;
-  fi
-   
 script:
 - cmake . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DSYLVAN_STATS=${SYLVAN_STATS} -DSYLVAN_BUILD_EXAMPLES=ON
-- make -j 4
-- make test
+- cmake --build . -j 4
+- ctest
 - examples/simple
 - examples/bddmc models/schedule_world.2.bdd -w 2 | tee /dev/fd/2 | grep -q "1,570,340"
 - examples/lddmc models/blocks.2.ldd -w 2 | tee /dev/fd/2 | grep -q "7,057 states"
