Fix build for OSX

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -43,6 +43,15 @@ endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     # add argp library for OSX
+    find_library(argp_path argp)
+    get_filename_component(argp_lib_dir ${argp_path} DIRECTORY)
+    get_filename_component(argp_prefix ${argp_lib_dir} DIRECTORY)
+    if("${argp_prefix}" STREQUAL "")
+        message(WARNING "Can't find path to argp library; bravely continuing on")
+    else()
+        include_directories(${argp_prefix}/include/)
+        link_directories(${argp_prefix}/lib/)
+    endif()
     target_link_libraries(bddmc argp)
     target_link_libraries(lddmc argp)
     if(MEDDLY_FOUND)
