--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -43,23 +43,16 @@ endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     # add argp library for OSX
-    find_library(argp_path argp)
-    get_filename_component(argp_lib_dir ${argp_path} DIRECTORY)
-    get_filename_component(argp_prefix ${argp_lib_dir} DIRECTORY)
-    if("${argp_prefix}" STREQUAL "")
-        message(WARNING "Can't find path to argp library; bravely continuing on")
-    else()
-        include_directories(${argp_prefix}/include/)
-        link_directories(${argp_prefix}/lib/)
-    endif()
-    target_link_libraries(bddmc argp)
-    target_link_libraries(lddmc argp)
+    find_package(Argp REQUIRED)
+    include_directories(${ARGP_INCLUDE_PATH})
+    target_link_libraries(bddmc ${ARGP_LIBRARIES})
+    target_link_libraries(lddmc ${ARGP_LIBRARIES})
     if(MEDDLY_FOUND)
-        target_link_libraries(medmc argp)
-        target_link_libraries(ldd2meddly argp)
+        target_link_libraries(medmc ${ARGP_LIBRARIES})
+        target_link_libraries(ldd2meddly ${ARGP_LIBRARIES})
     endif()
-    target_link_libraries(ldd2bdd argp)
-    target_link_libraries(nqueens argp)
+    target_link_libraries(ldd2bdd ${ARGP_LIBRARIES})
+    target_link_libraries(nqueens ${ARGP_LIBRARIES})
 endif()
 
 
