--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(SOURCES
+target_sources(Sylvan 
+  PRIVATE
     lace.c
     sha2.c
     sylvan_bdd.c
@@ -14,48 +15,94 @@ set(SOURCES
     sylvan_sl.c
     sylvan_stats.c
     sylvan_table.c
+  PUBLIC
+    $<INSTALL_INTERFACE:lace.h>
+    $<INSTALL_INTERFACE:sylvan.h>
+    $<INSTALL_INTERFACE:sylvan_bdd.h>
+    $<INSTALL_INTERFACE:sylvan_cache.h>
+    $<INSTALL_INTERFACE:sylvan_config.h>
+    $<INSTALL_INTERFACE:sylvan_common.h>
+    $<INSTALL_INTERFACE:sylvan_gmp.h>
+    $<INSTALL_INTERFACE:sylvan_hash.h>
+    $<INSTALL_INTERFACE:sylvan_int.h>
+    $<INSTALL_INTERFACE:sylvan_ldd.h>
+    $<INSTALL_INTERFACE:sylvan_ldd_int.h>
+    $<INSTALL_INTERFACE:sylvan_mt.h>
+    $<INSTALL_INTERFACE:sylvan_mtbdd.h>
+    $<INSTALL_INTERFACE:sylvan_mtbdd_int.h>
+    $<INSTALL_INTERFACE:sylvan_obj.hpp>
+    $<INSTALL_INTERFACE:sylvan_stats.h>
+    $<INSTALL_INTERFACE:sylvan_table.h>
+    $<INSTALL_INTERFACE:sylvan_tls.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/lace.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_bdd.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_cache.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_config.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_common.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_gmp.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_hash.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_int.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_ldd.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_ldd_int.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_mt.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_mtbdd.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_mtbdd_int.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_obj.hpp>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_stats.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_table.h>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_tls.h>
 )
 
-set(HEADERS
-    lace.h
-    sylvan.h
-    sylvan_bdd.h
-    sylvan_cache.h
-    sylvan_config.h
-    sylvan_common.h
-    sylvan_gmp.h
-    sylvan_hash.h
-    sylvan_int.h
-    sylvan_ldd.h
-    sylvan_ldd_int.h
-    sylvan_mt.h
-    sylvan_mtbdd.h
-    sylvan_mtbdd_int.h
-    sylvan_obj.hpp
-    sylvan_stats.h
-    sylvan_table.h
-    sylvan_tls.h
+target_compile_features(Sylvan PUBLIC c_std_11 cxx_std_11)
+target_compile_options(Sylvan PRIVATE -Wall -Wextra -Werror -fno-strict-aliasing -Wno-deprecated)
+
+target_include_directories(Sylvan
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
+    $<INSTALL_INTERFACE:include>
 )
 
-option(BUILD_SHARED_LIBS "Enable/disable creation of shared libraries" ON)
-option(BUILD_STATIC_LIBS "Enable/disable creation of static libraries" ON)
+target_link_libraries(Sylvan PUBLIC m pthread)
 
-add_library(sylvan ${SOURCES})
+# We only want to include the custom MTBDD type GMP if we actually have the GMP library
 
-find_package(GMP REQUIRED)
-
-target_include_directories(sylvan PRIVATE ${GMP_INCLUDE_DIR})
-
-target_link_libraries(sylvan m pthread ${GMP_LIBRARIES})
-
-if(UNIX AND NOT APPLE)
-    target_link_libraries(sylvan rt)
+find_package(GMP)
+if(GMP_FOUND)
+  target_sources(Sylvan 
+    PRIVATE
+      sylvan_gmp.c
+    PUBLIC
+      $<INSTALL_INTERFACE:sylvan_gmp.h>
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sylvan_gmp.h>
+  )
+  target_include_directories(Sylvan PRIVATE ${GMP_INCLUDE_DIR})
+  target_link_libraries(Sylvan PUBLIC ${GMP_LIBRARIES})
 endif()
+
+# Do we want to collect BDD statistics?
 
 option(SYLVAN_STATS "Collect statistics" OFF)
 if(SYLVAN_STATS)
-    set_target_properties(sylvan PROPERTIES COMPILE_DEFINITIONS "SYLVAN_STATS")
+  set_target_properties(Sylvan PROPERTIES COMPILE_DEFINITIONS "SYLVAN_STATS")
 endif()
 
-install(TARGETS sylvan DESTINATION "${CMAKE_INSTALL_LIBDIR}")
-install(FILES ${HEADERS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+get_target_property(Sylvan_PUBLIC_HEADERS Sylvan INTERFACE_SOURCES)
+set_target_properties(Sylvan PROPERTIES PUBLIC_HEADER "${Sylvan_PUBLIC_HEADERS}")
+
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/sylvan.pc.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/sylvan.pc" @ONLY)
+
+if(NOT subproject)
+  include(GNUInstallDirs)
+  include(CMakePackageConfigHelpers)
+
+  install(TARGETS Sylvan
+    EXPORT sylvan-export
+    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    INCLUDES DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+  )
+  install(EXPORT sylvan-export NAMESPACE Sylvan:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/sylvan)
+  install(FILES "${CMAKE_CURRENT_BINARY_DIR}/sylvan.pc" DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
+endif()
